@@ -3,6 +3,8 @@
 @item removed parameter @samp{--noDeadlockDetection}
 
 @item reorganized internal livelock detection; avoided additional bit to be stored for each internal marking
+
+@item fixed bug #14166 (@url{https://gna.org/bugs/?14166}): adding dead dummy transition
 @end itemize
 
 
