@@ -1,0 +1,27 @@
+{
+  generated by: Marlene 0.5-unreleased
+  input file:   
+  invocation:   
+  net size:     |P|= 17  |P_in|= 2  |P_out|= 6  |T|= 0  |F|= 0
+}
+
+PLACE
+  INTERNAL
+    net1.p9; SAFE 2: comp_RAsk_for_Rental_Dates_and_Locations, comp_RCharge_Customer, comp_RCustomer_Welcome, comp_RNegociate_CarGroup, comp_RPayment, comp_RRental_Request, comp_RRental_Reservation, comp_RSelect_Payment_Type;
+
+  INPUT
+    send_RPayment, send_RRental_Request;
+
+  OUTPUT
+    receive_RAsk_for_Rental_Dates_and_Locations, receive_RCharge_Customer, receive_RCustomer_Welcome, receive_RNegociate_CarGroup, receive_RRental_Reservation, receive_RSelect_Payment_Type;
+
+INITIALMARKING
+  comp_RAsk_for_Rental_Dates_and_Locations: 2, comp_RCharge_Customer: 2, comp_RCustomer_Welcome: 2, comp_RNegociate_CarGroup: 2, comp_RPayment: 2, comp_RRental_Request: 2, comp_RRental_Reservation: 2, comp_RSelect_Payment_Type: 2;
+
+FINALCONDITION
+  (comp_RSelect_Payment_Type = 2 AND comp_RAsk_for_Rental_Dates_and_Locations = 2 AND comp_RPayment = 2 AND comp_RRental_Request = 2 AND net1.p9 = 1 AND comp_RNegociate_CarGroup = 2 AND comp_RRental_Reservation = 2 AND comp_RCustomer_Welcome = 2 AND comp_RCharge_Customer = 2 AND ALL_OTHER_PLACES_EMPTY);
+
+
+
+
+{ END OF FILE '' }
